# yolov5-libtorch-cpp

./: .gitignore  CMakeLists.txt  README.md
include/: detector.h
src/: detector.cpp  main.cpp
weights/: coco.names
